--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ h3 {
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family: Arial;
+  font-family: 'Montserrat', serif;
   color: #ffffff;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
